[update] cheesy headline

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/ico" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>myNameIsj3ff👨🏻‍💻</title>
+    <title>😈😈😈😈😈</title>
   </head>
   <body>
     <canvas id="bg"></canvas>
@@ -16,7 +16,10 @@
       </header>
 
       <blockquote>
-        <p>I like making stuff and putting it on the internet</p>
+        <p>
+          “I’m no mathematician, but I’ve been told I’m good with numbers. How
+          about you give me yours so I can prove it?”
+        </p>
       </blockquote>
 
       <section>
