--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <main>
       <header>
-        <h1>myNameIs j3ff</h1>
-        <p>JK, I'm Kevin👨🏻‍💻</p>
+        <h1>Hi👋,</h1>
+        <h1>I'm Kevin</h1>
       </header>
 
       <blockquote>
@@ -23,100 +23,47 @@
       </blockquote>
 
       <section>
-        <h2>📜 Manifesto</h2>
+        <h2>📜 About Me.</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          I'm Kevin, a motivated, curious, and passionate developer. I am a
+          native English speaker and have 10 years of experience living in
+          Canada. My dream is to make the world a better place through
+          technology. Deeply passionate about Software Development, Web
+          Development, and Blockchain
         </p>
       </section>
-
-      <section class="light">
-        <h2>👩🏽‍🚀 Projects</h2>
-
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-
-        <h2>🏆 Accomplishments</h2>
-
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-      </section>
-
-      <blockquote>
-        <p>The best way out is always through <br />-Robert Frost</p>
-      </blockquote>
 
       <section class="left">
-        <h2>🌮 Work History</h2>
+        <h2>👩🏽‍🚀 Work History</h2>
 
-        <h3>McDonalds</h3>
+        <h3>Application Developer - IBM</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          Collaborate with backend engineers, UI designers to utilize jQuery,
+          ReactJS, Bootstrap, Angular, and PrimeNG for frontend development.
         </p>
-        <h3>Burger King</h3>
+        <h3>FinTech Development Intern - CTBC Bank</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          1. Responsible for developing RPA programs to automate common
+          workflows. 2. Used Java (Spring, MyBatis) in conjunction with JSP to
+          build a web application dedicated to user and request tracking.
+          Additionally, I harnessed the capabilities of jQuery and Ajax for
+          enhanced interactivity, while SQL was employed for database management
+          using DBeaver. The whole project was developed using the Eclipse IDE.
         </p>
-        <h3>Taco Bell</h3>
+        <h3>Blockchain and NFT Intern - Fansi.Inc</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          Responsible for composing articles, blockchain research, and social
+          media marketing.
+        </p>
+        <h3>Android Development Intern - National Chung Cheng University</h3>
+        <p>
+          Collaborated with SABF (印度南亞竹基金會) to create an Android app.
+          Responsible for app development using Java using Andriod Studio. My
+          endeavors involved a comprehensive exploration of fundamental Android
+          development concepts such as activities, fragments, and the nav
+          controller. To ensure seamless collaboration and version control
+          throughout the project's lifecycle, our team utilized Git and GitHub
+          as integral components of the development process.
         </p>
       </section>
 
